[project]
name = "sectools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnsdump",
    "sectools-lib",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]

[tool.uv.sources]
open-asset-model = { git = "https://github.com/0ppliger/open-asset-model.py.git", branch = "master" }
open-asset-store = { git = "https://github.com/0ppliger/open-asset-store.py.git", branch = "master" }
sectools-lib = { workspace = true }
dnsdump = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
