[project]
name = "graphrecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "oam-client>=0.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]

[tool.uv.sources]
open-asset-model = { git = "https://github.com/0ppliger/open-asset-model.py.git", branch = "master" }
open-asset-store = { git = "https://github.com/0ppliger/open-asset-store.py.git", branch = "master" }
dnsdump = { workspace = true }
certdump = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
